--- a/spiffs_uploader.htm
+++ b/spiffs_uploader.htm
@@ -3,6 +3,15 @@
 <head>
 <meta charset="utf-8">
 <title>SPIFFS Uploader</title>
+<style>
+input[type=submit] {
+  background-color: #7c8cf8;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+}
+</style>
 <script>    
 function uploader(e, up){
 e.preventDefault();
@@ -15,6 +24,19 @@ var a = new FormData();
   a.append("data", up.data.files[0], up.data.value);
   xhttp.open("POST", up.path.value + "/edit");
   xhttp.send(a);	
+}    
+function updater(e, up){
+  e.preventDefault();//  alert(up.data.value);
+	var xhttp = new XMLHttpRequest();
+	xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {		
+		alert("Uploaded Successfully");
+	}
+};
+var a = new FormData();
+  a.append("data", up.data.files[0], up.data.value);
+  xhttp.open("POST", up.path.value + "/update");
+  xhttp.send(a);	
 }
 </script>
 </head>
@@ -22,7 +44,12 @@ var a = new FormData();
 <form onsubmit="uploader(event, this)">
 	<input type="text" name="path" placeholder="host path http://" value="http://esp8266.local">
 	<input type='file' name='data'>
-	<input type='submit' value='Update Spiffs'>
+	<input type='submit' value='Update Spiffs' style="background-color: red;">
+</form>
+<form onsubmit="updater(event, this)">
+	<input type="text" name="path" placeholder="host path http://" value="http://192.168.4.1">
+	<input type='file' name='data' accept=".bin">
+	<input type='submit' value='Update Firmware'>
 </form>
 </body>
 </html>
